--- a/src/Resources/views/Profile/show.html.twig
+++ b/src/Resources/views/Profile/show.html.twig
@@ -33,7 +33,7 @@ file that was distributed with this source code.
 
 {% block show %}
 
-    {% include "@AppExplorer/Core/logs.html.twig" %}
+    {% include "@SplashAdmin/Core/logs.html.twig" %}
     
     <section class="content">
         <div class="row">
