--- a/src/Resources/views/Objects/list.html.twig
+++ b/src/Resources/views/Objects/list.html.twig
@@ -1,16 +1,20 @@
 {#
 
-This file is part of the Sonata package.
-
-(c) Thomas Rabaix <thomas.rabaix@sonata-project.org>
-
-For the full copyright and license information, please view the LICENSE
-file that was distributed with this source code.
+ *  This file is part of SplashSync Project.
+ *
+ *  Copyright (C) 2015-2018 Splash Sync  <www.splashsync.com>
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+ *
+ *  For the full copyright and license information, please view the LICENSE
+ *  file that was distributed with this source code.
 
 #}
 
 {% extends "@SonataAdmin/CRUD/base_list.html.twig" %}
-{% import   "AppExplorerBundle:Macros:fields.html.twig"   as  Fields %}
+{% import   "@SplashAdmin/Macros/fields.html.twig"   as  Fields %}
 
 {%- block actions -%}
     {% include '@SonataAdmin/CRUD/action_buttons.html.twig' %}
@@ -29,7 +33,7 @@ file that was distributed with this source code.
 
 {% block list_table %}
 
-    {% include "@AppExplorer/Core/logs.html.twig" %}
+    {% include "@SplashAdmin/Core/logs.html.twig" %}
     
     <section class="content">
         <div class="row">
@@ -56,11 +60,11 @@ file that was distributed with this source code.
                                         <td class="sonata-ba-list-field">{{ Fields.data(field.type, object[field.id], admin) }}</td>
                                     {% endfor %}
                                         <td class="sonata-ba-list-field pull-right">
-                                            {% include "@AppExplorer/Objects/show_button.html.twig" %}
+                                            {% include "@SplashAdmin/Objects/show_button.html.twig" %}
                                             &nbsp;
-                                            {% include "@AppExplorer/Objects/edit_button.html.twig" %}
+                                            {% include "@SplashAdmin/Objects/edit_button.html.twig" %}
                                             &nbsp;
-                                            {% include "@AppExplorer/Objects/delete_button.html.twig" %}
+                                            {% include "@SplashAdmin/Objects/delete_button.html.twig" %}
                                         </td>
                                 </tr>
                                 {% endfor %}
@@ -76,7 +80,7 @@ file that was distributed with this source code.
 {% endblock %}
 
 {% block list_filters_actions %}
-    {% include "@AppExplorer/Objects/object__selector.html.twig" %}
+    {% include "@SplashAdmin/Objects/object__selector.html.twig" %}
 {% endblock %}
 
 {% block list_filters %}
