--- a/src/Resources/views/Macros/fields.html.twig
+++ b/src/Resources/views/Macros/fields.html.twig
@@ -116,11 +116,11 @@
         <ul class="list-unstyled">
             {% for key, value in Data %}
                 {% set flag = key|split('_', 2) %}
-                {% set flagUrl = "bundles/appexplorer/flags/1x1/" ~ (flag[1]|default(flag[0]|default("")) | lower) ~ ".svg" %}
+                {% set flagUrl = "bundles/splashadmin/flags/1x1/" ~ (flag[1]|default(flag[0]|default("")) | lower) ~ ".svg" %}
                 <li>
                     <img src="{{ asset(flagUrl) }}" width="15px">
                     {% if value is not iterable %}
-                        &nbsp;{{ value | truncate(250) }}       
+                        &nbsp;{{ value }}       
                     {% else %}
                         <span class="text-danger"><i class="fa fa-envelope"></i>&nbsp;Wrong Field Format!</span>
                     {% endif %}
@@ -131,7 +131,7 @@
     {% elseif Format == "country" %}
         
         {% if Data  %}
-            {% set flagUrl = "bundles/appexplorer/flags/1x1/" ~ (Data | lower) ~ ".svg" %}
+            {% set flagUrl = "bundles/splashadmin/flags/1x1/" ~ (Data | lower) ~ ".svg" %}
                 
             <img src="{{ asset(flagUrl) }}" width="15px">
             &nbsp;{{ Data | truncate(10) }}
@@ -148,7 +148,7 @@
     {% elseif Format == "lang" %}
         
         {% set flag = Data|split('_', 2) %}
-        {% set flagUrl = "bundles/appexplorer/flags/1x1/" ~ (flag[1]|default(flag[0]|default("")) | lower) ~ ".svg" %}
+        {% set flagUrl = "bundles/splashadmin/flags/1x1/" ~ (flag[1]|default(flag[0]|default("")) | lower) ~ ".svg" %}
         <img src="{{ asset(flagUrl) }}" width="15px">
         &nbsp;{{ Data }}
         
