--- a/src/Resources/views/Profile/Blocks/infos.html.twig
+++ b/src/Resources/views/Profile/Blocks/infos.html.twig
@@ -4,8 +4,10 @@
         <div class="info-box">
 
             <span class="info-box-icon bg-default">
-                {% if infos.icoraw | default(false) is not empty %}
-                <img src="data:image/gif;base64,{{ infos.icoraw }}" class="img-responsive">                            
+                {% if infos.logourl | default(false) is not empty %}
+                <img src="{{ infos.logourl }}" class="img-responsive">                            
+                {% elseif infos.logoraw | default(false) is not empty %}
+                <img src="data:image/gif;base64,{{ infos.logoraw }}" class="img-responsive">                            
                 {% else %}
                 <img src="{{ asset('bundles/splash/splash-logo.png') }}" class="img-responsive">                            
                 {% endif %}
