--- a/src/Resources/views/Forms/image.html.twig
+++ b/src/Resources/views/Forms/image.html.twig
@@ -17,7 +17,7 @@
     Rendering of Splash Image From Fields 
 #}
 {% block splash_image_row %}
-    {% import   "AppExplorerBundle:Macros:fields.html.twig"   as  Fields %}
+    {% import   "@SplashAdmin/Macros/fields.html.twig"   as  Fields %}
     <div class="row margin-10" id="{{ form.vars.id }}">
         
         <div class="col-xs-12 text-left">
