--- a/src/Resources/views/CRUD/base_show_field.html.twig
+++ b/src/Resources/views/CRUD/base_show_field.html.twig
@@ -51,7 +51,12 @@
                 {% for FieldId, FieldDefinition in field_description.options.splash_field %}
                     <tr>
                         {# Display Field List Item Data#}
-                        <th style="width: 1px !important;">{{ FieldDefinition.name }}</th>
+                        <th style="width: 100px !important;">
+                            {% if FieldDefinition.options.language is defined %}
+                                {{ Fields.lang(FieldDefinition.options.language) }}
+                            {% endif %}                            
+                            {{ FieldDefinition.name }}
+                        </th>
                         <td style="width: 150px !important;">{{ Fields.format(FieldDefinition.type) }}</td>
                         <td>{{ Fields.data(FieldDefinition.type, Data[FieldId] | default(), admin) }}</td>
                         </td>
