--- a/src/Resources/views/Config/Blocks/form.html.twig
+++ b/src/Resources/views/Config/Blocks/form.html.twig
@@ -1,23 +1,19 @@
 
+
+
+                    
 <div class="box box-primary">
-    <div class="box-body ">
-        <div class="info-box">
-
-            <span class="info-box-icon bg-primary">
-                <i class="fa fa-cogs"></i>
-            </span>
-
-            <div class="info-box-content">
-
-                <span class="info-box-text">Server Configuration</span>
-
-                <div class="progress">
-                    <div class="progress-bar" style="width: 0%"></div>
-                </div>
-                <span class="progress-description">
-                    {{ form(form) }}
-                </span>
-            </div>
+    
+    <div class="box-header">
+        <h4 class="box-title">
+            <i class="fa fa-cogs"></i>
+            Server Configuration
+        </h4>
+    </div>
+    
+    <div class="box-body">
+        <div class="sonata-ba-collapsed-fields" style="padding-left: 15px; padding-right: 15px;">
+            {{ form(form) }}
         </div>
     </div>
 </div>
