--- a/src/Resources/views/Widgets/list.html.twig
+++ b/src/Resources/views/Widgets/list.html.twig
@@ -1,13 +1,3 @@
-{#
-
-This file is part of the Sonata package.
-
-(c) Thomas Rabaix <thomas.rabaix@sonata-project.org>
-
-For the full copyright and license information, please view the LICENSE
-file that was distributed with this source code.
-
-#}
 
 {% extends "@SonataAdmin/CRUD/base_list.html.twig" %}
 
@@ -39,26 +29,24 @@ file that was distributed with this source code.
 
 {% block list_filters %}
 
-    <link href="{{ asset('bundles/splashwidgets/css/SplashWidgets.css') }}" type="text/css" rel="stylesheet" media="screen" />
-
-    
     {% include "@SplashAdmin/Core/logs.html.twig" %}
     
     <div class="col-xs-12">
         
         <div class="row">
             {% for Widget in Widgets %}
-                {{ render(controller('SplashWidgetsBundle:View:delayed', { 'service' : Widget.service,  'type' : Widget.type })) }}
+                {{ render(controller('SplashWidgetsBundle:View:delayed', { 
+                    'service' : Widget.service,  
+                    'type' : Widget.type, 
+                    'options': { 'Mode': "bs3" } | json_encode() 
+                })) }}
             {% endfor %} 
         </div>  
     </div>
 
-    <script src="{{ asset('bundles/fosjsrouting/js/router.min.js') }}"></script>
-    <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
+{% endblock %}
 
-    <script type="text/javascript" src="{{ asset('bundles/splashwidgets/js/SplashWidgetsBundle.js') }}"></script>
-    <script type="text/javascript" src="http://omnipotent.net/jquery.sparkline/2.1.2/jquery.sparkline.min.js"></script>
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-  
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('admin') }}
 {% endblock %}
