FIX: Splash Logs on Show & Edit pages

--- a/src/Resources/views/Core/logs.html.twig
+++ b/src/Resources/views/Core/logs.html.twig
@@ -13,6 +13,10 @@
 
 #}
 
+{% if log is not defined %}
+    {% set log = "" | htmlLogs %}
+{% endif %}
+    
 {% if log is defined and log is not empty %}
     <section class="content" style="min-height: 10px;">
         <div class="row">
