FIX: Forced Object Types FIX: Logs in Show & Edit Pages

--- a/src/Resources/views/Objects/list.html.twig
+++ b/src/Resources/views/Objects/list.html.twig
@@ -38,7 +38,7 @@
     <section class="content">
         <div class="row">
             <div class="col-xs-12 col-md-12">
-                <div class="box box-primary" style="margin-bottom: 100px;">
+                <div class="box box-primary" style="margin-bottom: 20px;">
                     <div class="box-body table-responsive no-padding">
                         <table class="table table-bordered table-striped table-hover sonata-ba-list">
 
@@ -75,7 +75,9 @@
                 </div>
             </div>
         </div>
-    </section>     
+    </section>  
+                          
+    {% include "@SplashAdmin/CRUD/list_pager.html.twig" %}
         
 {% endblock %}
 
