ADD: Support for Inline Fields

--- a/src/Resources/views/Profile/Blocks/infos.html.twig
+++ b/src/Resources/views/Profile/Blocks/infos.html.twig
@@ -63,6 +63,10 @@
                                 <td>Server Url</td>
                                 <td>{{ infos.serverurl | default('?') }}</td>
                             </tr>
+                            <tr>
+                                <td>Version</td>
+                                <td>{{ infos.moduleversion | default('?') }}</td>
+                            </tr>
                         </tbody>
                     </table>
                 </span>
