Migrate to PHP 8.0

--- a/src/Resources/views/Macros/fields.html.twig
+++ b/src/Resources/views/Macros/fields.html.twig
@@ -249,7 +249,7 @@
                     <img class="media-object img-responsive" src="{{ Data.url }}" style="max-width: 120px;max-height: 120px;">
                 </a>
             {% elseif Admin and Data.file is defined and Data.md5 is defined %}
-                {% set Url = Admin.generateUrl('image', {"path": Data.path | base64_encode , "md5": Data.md5|default("no-md5")} ) %}
+                {% set Url = Admin.generateUrl('image', {"path": Data.path|base64_encode|e("html_attr") , "md5": Data.md5|default("no-md5")} ) %}
                 <a href="{{ Url }}" target="_blank">
                     <img class="media-object img-responsive" src="{{ Url }}" style="max-width: 120px;max-height: 120px;">
                 </a>
@@ -263,7 +263,7 @@
                 <h4 class="media-heading">{{ Data.filename }}
             {% endif %}
             {% if Admin and Data.path is defined and Data.md5 is defined %}
-                    {% set Url = Admin.generateUrl('image', {"path": Data.path | base64_encode , "md5": Data.md5|default("no-md5")} ) %}
+                    {% set Url = Admin.generateUrl('image', {"path": Data.path|base64_encode|e("html_attr")  , "md5": Data.md5|default("no-md5")} ) %}
                     <a class="btn btn-xs btn-primary" href="{{ Url }}" target="_blank">
                         <i class="fa fa-eye"></i>
                         View
@@ -293,7 +293,7 @@
         <div class="media">
             
             {% if Data.file is defined and Data.md5 is defined %}
-                {% set Url = Admin.generateUrl('file', {"path": Data.path | base64_encode , "md5": Data.md5|default("no-md5")} ) %}
+                {% set Url = Admin.generateUrl('file', {"path": Data.path|base64_encode|e("html_attr") , "md5": Data.md5|default("no-md5")} ) %}
             {% elseif Data.url is defined and Data.url is not empty %}
                 {% set Url = Data.url %}
             {% endif %}
@@ -313,7 +313,7 @@
                     <h4 class="media-heading">{{ Data.filename }}
                 {% endif %}
                 {% if Data.path is defined and Data.md5 is defined %}
-                        {% set Url = Admin.generateUrl('file', {"path": Data.path | base64_encode , "md5": Data.md5|default("no-md5")} ) %}
+                        {% set Url = Admin.generateUrl('file', {"path": Data.path|base64_encode|e("html_attr") , "md5": Data.md5|default("no-md5")} ) %}
                         <a class="btn btn-xs btn-primary" href="{{ Url }}" target="_blank">
                             <i class="fa fa-eye"></i>
                             View
